--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vibeathon - Build the Future</title>
-    <meta name="description" content="Join Vibeathon hackathon and compete for amazing prizes across AI/ML, Cloud, Web3, and IoT tracks" />
+    <meta name="description" content="Join Vibeathon hackathon and compete for amazing prizes" />
     <meta name="author" content="Vibeathon Team" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
