required changes updated

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <meta property="og:title" content="Vibeathon - Build the Future" />
     <meta property="og:description" content="Join Vibeathon hackathon and compete for amazing prizes" />
-    <meta property="og:image" content="/src/assets/thumbnail.png" />
+    <meta property="og:image" content="https://github.com/SAP-Inside-Track-Bengaluru/SIT-BLR-Vibeathon/blob/main/src/assets/thumbnail.png?raw=true" />
     <meta property="og:url" content="https://vibeathon.sitblr.in" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Vibeathon - Build the Future" />
     <meta name="twitter:description" content="Join Vibeathon hackathon and compete for amazing prizes" />
-    <meta name="twitter:image" content="/src/assets/thumbnail.png" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/SAP-Inside-Track-Bengaluru/SIT-BLR-Vibeathon/refs/heads/main/src/assets/thumbnail.png" />
   </head>
 
   <body>
